deploy/k8s/account-site/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: account-site
  namespace: account-site
  labels:
    app: account-site
spec:
  selector:
    app: account-site
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
